@@ -35,6 +35,7 @@
 
 === Bug fixes ===
  * #1052 (The Dirichlet and Normal distributions only have 1D graphics in the doc)
+ * #1224 (The examples in the doc of the DomainEvent class are unclear)
  * #1287 (The constructors of KernelSmoothing have no doc)
  * #1418 (The Contour example does not present the second constructor)
  * #1431 (The figure for LHSExperiment is not accurate)
